--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,8 +7,12 @@ jobs:
     uses: ./.github/workflows/run-tests.yml
     secrets: inherit
 
+  check-conventional-commits:
+    uses: armakuni/github-actions/.github/workflows/check-conventional-commits.yml@v0.2.3
+
   create-release:
     needs:
       - run-tests
+      - check-conventional-commits
     if: github.ref == 'refs/heads/main'
     uses: armakuni/github-actions/.github/workflows/tag-and-release.yml@v0.2.3
