ci: Get the repository name via github.repository

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,10 +27,17 @@ jobs:
         run: go mod download
         working-directory: test
 
+      - name: Get Repository Name
+        id: get-repository-name
+        run: |
+          full_name="${{ github.repository }}"
+          repository_name=${full_name#*/}
+          echo "repository-name=$repository_name" >> "$GITHUB_OUTPUT"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/terraform-aws-route53-public-hosted-zone-github-actions
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ steps.get-repository-name.outputs.repository-name }}-github-actions
           role-session-name: terratest-session
           aws-region: eu-west-3
 
