--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   run-tests:
+    if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/run-tests.yml
     secrets: inherit
 
