ci: Lint pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,6 +12,9 @@ jobs:
   check-conventional-commits:
     uses: armakuni/github-actions/.github/workflows/check-conventional-commits.yml@v0.8.2
 
+  lint-pipeline:
+    uses: armakuni/github-actions/.github/workflows/lint-pipeline.yml@v0.10.4
+
   generate-terraform-docs:
     if: github.ref == 'refs/heads/main'
     uses: armakuni/github-actions/.github/workflows/generate-terraform-docs.yml@v0.8.2
@@ -22,6 +25,7 @@ jobs:
 
   create-release:
     needs:
+      - lint-pipeline
       - run-tests
       - check-conventional-commits
       - generate-terraform-docs
